# bazy-danych

./: .gitignore  Cargo.toml  DOKUMENTACJA.md  README.md  adr.md  compose.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 0001_initial_schema.sql
backend/seeds/: seed.sql
backend/src/: main.rs
backend/src/routes/: mod.rs  reservations.rs
backend/src/tasks/: mod.rs  sweeper.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: api.rs  app.rs  main.rs
frontend/src/components/: header.rs  mod.rs  root.rs  seat_grid.rs
lab2/: ora-trip-cw_1.md  ora-trip-cw_2.md
lab3/: BD_MongoDB_cw_1.md
loadgen/: Cargo.toml
loadgen/src/: main.rs
